# astronote

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yaml
docs/: spec.md
examples/: example_multiple_file.py  example_single_file.py  sub_module.py
examples/sub_mod/: __init__.py  sub.py
src/astronote/: __init__.py  _model.py  cli.py  config.py  decorators.py  ir.py  manifest.py  params.py
src/astronote/analysis/: __init__.py  pipeline.py  resolver.py
src/astronote/notebook/: __init__.py  builder.py
tests/: test__model.py  test_analysis_pipeline.py  test_cli.py  test_decorators.py  test_ir.py  test_manifest.py  test_models.py  test_notebook_builder.py  test_params.py
tests/analysis/: test_pipeline.py  test_resolver.py
tests/notebook/: test_builder.py
