[project]
name = "astronote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "elda27", email = "kaz.birstick@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
astronote = "astronote:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
