[project]
name = "astronote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "elda27", email = "kaz.birstick@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nbformat>=5.10.4",
    "pydantic>=2.12.5",
]

[project.scripts]
astronote = "astronote.cli:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
